--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,10 @@ body{
 }
 
 .blog-titulo span{
-    color: red;
+    color: green;
 }
 
 .blog-titulo h3{
-    font-size: 2.4rem;
+    font-size: 3.4rem;
     font-weight: 600;
 }
